objects/Tracking_Information__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>Tracking Information</relationshipLabel>
        <relationshipName>Tracking_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Other_Outcome_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Current Other Outcome measures</inlineHelpText>
        <label>Current Other Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Primary_Outcome_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Current Primary Outcome Measures</inlineHelpText>
        <label>Current Primary Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Secondary_Outcome_Measures__c</fullName>
        <description>Description for Current Secondary Outcome measures.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Current Secondary Outcome measures.</inlineHelpText>
        <label>Current Secondary Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Primary_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Final Data Collection Date for Primary Outcome Measures</inlineHelpText>
        <label>Estimated Primary Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD5__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MD5</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Other_Outcome_Measures__c</fullName>
        <description>Description for Original Other Outcome measures.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Original Other Outcome measures.</inlineHelpText>
        <label>Original Other Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Primary_Outcome_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Original Primary Outcome Measures</inlineHelpText>
        <label>Original Primary Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Secondary_Outcome_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description for Original Secondary Outcome Measures.</inlineHelpText>
        <label>Original Secondary Outcome Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome Completion Date</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Measure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Primary Key (External Use)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Study Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Tracking Information</label>
    <nameField>
        <displayFormat>T- {0000}</displayFormat>
        <label>Tracking Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>